ingress-sonarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
spec:
  ingressClassName: traefik-external
  rules:
  - host: mediaserver.farh.net
    http:
      paths:
      - path: /sonarr/
        pathType: Prefix
        backend:
          service:
            name:  sonarr
            port:
              number: 8989
  tls:
  - hosts:
    - mediaserver.farh.net
    secretName: mediaserver-farh-net-cert-letsencrypt
